# DiscordBot

./: .env.sample  .gitignore  pyproject.toml
examples/: run.py
src/discord_bot/: discord_bot.py
